# potv2

./: .gitignore  Cargo.toml  LICENCE.md  README.md
src/: commands.rs  main.rs  pot.rs  yt.rs
src/commands/: shitpost_reactions.rs  voice_commands.rs
